tests/paczka1/small_fuzzy/47878152.err
Error in line 2: I6WTe S107 6,y
Error in line 3: 8dMbSg1crlH S195 34,9
Error in line 8: I6WTe S107 6,3
Error in line 13: 4zpm S107 31,2
Error in line 11: I6WTe S195 88,3
